crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_inter_tag_text_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..28
  HTML_BLOCK@0..28
    HTML_BLOCK_TAG@0..28
      TEXT@0..27 "<div>x</div> y <div>z ..."
      NEWLINE@27..28 "\n"
