crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_trailing_open_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..23
  HTML_BLOCK@0..23
    HTML_BLOCK_TAG@0..16
      TEXT@0..15 "<div id=\"x\">foo"
      NEWLINE@15..16 "\n"
    HTML_BLOCK_CONTENT@16..23
      TEXT@16..22 "</div>"
      NEWLINE@22..23 "\n"
