crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_unclosed_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..24
  HTML_BLOCK@0..6
    HTML_BLOCK_TAG@0..6
      TEXT@0..5 "<div>"
      NEWLINE@5..6 "\n"
  BLANK_LINE@6..7
    BLANK_LINE@6..7 "\n"
  PARAGRAPH@7..24
    TEXT@7..23 "after empty open"
    NEWLINE@23..24 "\n"
